@@ -252,6 +252,10 @@ Other Changes
 
   Closes #4369 and #6523
 
+* Fix pyreverse crash ``RuntimeError: dictionary changed size during iteration``
+
+  Relates to #6612
+
 * Fix bug where it writes a plain text error message to stdout, invalidating output formats.
 
   Closes #6597
