@@ -1,0 +1,5 @@
+classDiagram
+  class Tree {
+    inhabitant : Monkey
+    number_of_bananas : int
+  }
